--- a/html-css-modulo02/desafiomodulo02/index.html
+++ b/html-css-modulo02/desafiomodulo02/index.html
@@ -17,12 +17,10 @@
             Tudo aquilo que você sempre quis saber sobre o mundo Tech,  <br> em um único lugar
         </p>
         <nav>
-            <ul>
-                <li>Home</li>
-                <li>Notícias</li>
-                <li>Curiosidades</li>
-                <li>Fale Conosco</li>
-            </ul>
+                <a href="#Home/principal" target="_self">Home</a>
+                <a href="#Notícias" target="_self">Notícias</a>
+                <a href="#Curiosidades" target="_self">Curiosidades</a>
+                <a href="#FaleConosco" target="_self">Fale Conosco</a>
         </nav>
     </header>
     <main>
