--- a/html-css-modulo03/ex022/fundo006.html
+++ b/html-css-modulo03/ex022/fundo006.html
@@ -12,23 +12,28 @@
             background-image: url(imagens/wallpaper002.jpg);
             background-position: top center;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: 1366px 768px;
+            background-attachment: fixed;
+            
+            /*background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;*/
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             border-radius: 15px;
             margin: auto;
             border: 2px solid darkblue;
+
+            
         }
     </style>
 </head>
 <body>
     <main>
-        <h1><a href="" target="_blank">Teste de Imagem de</a> Fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.</p>
+        <h1>Teste de Imagem de</a> Fundo</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim vel totam. Illo voluptates ex incidunt at iusto similique explicabo nemo repudiandae distinctio saepe, adipisci quod itaque quos eius dolor? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum dolore quasi reprehenderit fugiat sint consequatur tempore, iusto minus asperiores, optio mollitia doloremque odit quidem iste eaque eveniet obcaecati animi architecto.</p>
     </main>
 </body>
 </html>
