--- a/html-css-modulo04/capitulo23/form02.html
+++ b/html-css-modulo04/capitulo23/form02.html
@@ -5,18 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário 02</title>
+    <style>
+        form {
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="cadastro.php" method="get">
+    <form action="cadastro.php" method="post">
 
         <p>
             <label for="iusu">Usuário</label>
-            <input type="text" name="usu" id="iusu">
+            <input type="text" name="usu" id="iusu" required minlength="8" placeholder=" Digite seu usuário">
         </p>
         <p>
             <label for="isen">Senha</label>
-            <input type="password" name="sen" id="isen">
+            <input type="password" name="sen" id="isen" required maxlength="15" placeholder=" password">
         </p>
         <p>
             <input type="submit" value="Enviar">
